# IIC-Forge

./: .dockerignore  NOTICE  README.md  compose.yml  pyproject.toml
cli/: utils.py
docs/superpowers/plans/: 2026-06-09-iic-forge-05-local-model-reconstruction.md  2026-06-12-iic-forge-deployment-cutover-rehearsal-focused-soak.md  (+2 more)
ops/: backup.sh  env.iic-forge.example  presoak.sh
ops/redis/: redis.conf
ops/runbooks/: f3-exit-gate.md  f4-exit-gate.md  f5-exit-gate.md  local-llm.md  operating-guide.md  service-platform.md
ops/systemd/: iic-forge-compose.service  iic-promoter.service  iic-triage.service  redis-server.service
scripts/: _repo_bootstrap.py  compare_deepseek_prompt_cache.py  f3_exit_gate.py  f4_exit_gate.py  f4_f5_exit_gate.py  f5_exit_gate.py  focused_soak_gate.py  shadow_eval.py
tests/: conftest.py  test_default_config_f5.py  test_default_config_llm_roles.py  test_env_overrides.py
tests/cli/: test_ensure_api_key.py
tests/dashboard/: test_costs_local_split.py  test_operations_panel.py
tests/delivery/: test_ordered_policy.py
tests/llm_clients/: conftest.py  test_availability_shared_conn.py  test_create_role_llm.py  test_fallback_key_isolation.py  test_json_schema_binding.py  test_llm_call_ledger.py  test_llm_call_wiring.py  test_local_contract.py  test_local_provider.py  test_think_stripper.py
tests/ops/: test_compose_contract.py  test_runtime_path_contract.py  test_service_platform_runbook.py
tests/orchestrator/: test_alert_evaluator_telemetry.py  test_compose_event_alert.py  test_cutover_counters.py  test_endpoint_down_alert.py  test_promoter_local_availability.py  test_promoter_strict_gate.py  test_promoter_uses_role.py  test_worker_lanes.py
tests/persistence/: test_platform_control_plane.py  test_shadow_eval_store.py
tests/scripts/: test_focused_soak_gate.py  test_repo_bootstrap.py  test_shadow_eval.py
tests/secretary/: test_compose_event_alert_light.py  test_service.py
tests/sensing/: test_adapter_gdelt.py  test_adapter_telegram.py  test_deferred_salience_retry.py  test_ops_redis_conf.py  test_salience.py  test_salience_schema_parse.py  test_source_health.py  test_triage_local_availability.py  test_triage_loop_nonblocking.py  test_triage_main_uses_role.py
tradingagents/: default_config.py
tradingagents/dashboard/: app.py
tradingagents/delivery/: base.py  email.py  policy.py  telegram.py
tradingagents/llm_clients/: __init__.py  api_key_env.py  availability.py  capabilities.py  factory.py  ledger.py  model_catalog.py  openai_client.py  postprocess.py  validators.py
tradingagents/ops/: __init__.py  self_alert.py
tradingagents/orchestrator/: action_handler.py  alert_evaluator.py  promoter.py  queue_store.py  worker.py
tradingagents/persistence/: db.py  schema.sql  store.py
tradingagents/secretary/: service.py
tradingagents/sensing/: deferred_retry.py  salience.py  source_health.py  triage.py
(+11 files in other folders)
