[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "iic-forge"
version = "0.2.5"
description = "IIC-FORGE: local-first investment intelligence built on TradingAgents"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain-core>=0.3.81",
    "backtrader>=1.9.78.123",
    "langchain-anthropic>=0.3.15",
    "langchain-experimental>=0.3.4",
    "langchain-google-genai>=4.0.0",
    "langchain-openai>=0.3.23",
    "langgraph>=0.4.8",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "jinja2>=3.1.0",
    "pandas>=2.3.0",
    "parsel>=1.10.0",
    "pytz>=2025.2",
    "pyyaml>=6.0",
    "questionary>=2.1.0",
    "redis>=6.2.0",
    "requests>=2.32.4",
    "rich>=14.0.0",
    "typer>=0.21.0",
    "setuptools>=80.9.0",
    "sqlite-vec>=0.1.6",
    "stockstats>=0.6.5",
    "tqdm>=4.67.1",
    "typing-extensions>=4.14.0",
    "yfinance>=0.2.63",
    # AKShare is the first market-data fallback after yfinance.
    "akshare>=1.18.64",
    # tabulate is required by pandas.DataFrame.to_markdown — used by the
    # yfinance options vendor in tradingagents/dataflows/yfinance_options.py.
    "tabulate>=0.9",
    "python-telegram-bot>=20.0,<22.0",
    "streamlit>=1.30,<2.0",
    "altair>=5.0",
]

[project.optional-dependencies]
# Optional vendors enabled via IIC-FORGE-02. Install with:
#   pip install -e .[polygon,futu,osint]
# Each vendor's module raises DataVendorError on missing creds/deps so the
# default install still runs end-to-end with yfinance alone.
polygon = []  # uses requests (already a core dep); add "polygon-api-client>=1.14.0" if you prefer the official SDK
futu = ["futu-api>=9.0"]
osint = ["telethon>=1.36", "tweepy>=4.14"]
sensing = [
    "telethon>=1.36",                  # F3 telegram adapter (also in osint for F0)
    "tweepy>=4.14",                    # F3 x adapter
    "feedparser>=6.0",                 # F3 rss adapter
    "sentence-transformers>=2.5",      # 384-dim local embedder; matches vec_index schema
]
dev = [
    "fakeredis>=2.20",                 # async-compatible Redis fake for unit tests
    "pytest-asyncio>=0.23",            # async test support (declared with asyncio_mode=auto below)
    "freezegun>=1.4",                  # F4: deterministic time control for cooldown tests
]

[project.scripts]
iic-forge = "cli.main:app"
tradingagents = "cli.main:app"

[tool.setuptools.packages.find]
include = ["tradingagents*", "cli*"]

[tool.setuptools.package-data]
cli = ["static/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
asyncio_mode = "auto"
markers = [
    "unit: fast isolated unit tests",
    "integration: tests requiring external services",
    "smoke: quick sanity-check tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]
